Added transform and animation

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
   </head>
   <body>
     <!--Шапка сайта-->
-    <header class="page-header">
+    <header class="page-header no-border">
      <div class="container header-container">
         <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
         <nav class="main-nav">
           <ul class="site-nav list">
-            <li class="site-nav-item"><a href="./index.html" class="link current">Студия</a></li>
-            <li class="site-nav-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
+            <li class="site-nav-item"><a href="./index.html" class="site-nav-link current">Студия</a></li>
+            <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+            <li class="site-nav-item"><a href="" class="site-nav-link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contact-nav list">
           <li class="contact-nav-item">
-            <a href="mailto:info@devstudio.com" class="link">
+            <a href="mailto:info@devstudio.com" class="contact-nav-link">
               <svg class="link-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>info@devstudio.com
             </a>
           </li>
           <li class="contact-nav-item">
-            <a href="tel:+380961111111" class="link">
+            <a href="tel:+380961111111" class="contact-nav-link">
             <svg class="link-icon" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11
@@ -47,7 +47,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="button-studio">Заказать услугу</button>
+          <button type="button" class="button-studio" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!--Особенности-->
@@ -115,25 +115,34 @@
          <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
             <li class="work-list-item">
-              <img
-              src="./images/photo-1.jpg"
-              alt="Руки на клавиатуре. Впереди находится планшет и компьютер с изображением кода на них, слева – бумага с алгоритмом"
-              width="370"
-              />
+              <div class="thumb">
+                <img
+                src="./images/photo-1.jpg"
+                alt="Руки на клавиатуре. Впереди находится планшет и компьютер с изображением кода на них, слева – бумага с алгоритмом"
+                width="370"
+                />
+                <p class="work-item-text">Десктопные приложения</p>
+              </div>
             </li>
             <li class="work-list-item">
-              <img
-              src="./images/photo-2.jpg"
-              alt="В левой руке находится телефон, правая рука находится на тачпаде ноутбука. На экране ноутбука размещены различные модели отображения страницы на мобильном телефоне"
-              width="370"
-              />
+              <div class="thumb">
+                <img
+                src="./images/photo-2.jpg"
+                alt="В левой руке находится телефон, правая рука находится на тачпаде ноутбука. На экране ноутбука размещены различные модели отображения страницы на мобильном телефоне"
+                width="370"
+                />
+                <p class="work-item-text">Мобильные приложения</p>
+              </div>
             </li>
             <li class="work-list-item">
-              <img
-              src="./images/photo-3.jpg"
-              alt="В левой руке находится планшет с изображенной на нем цветовой палитрой"
-              width="370"
-              />
+              <div class="thumb">
+                <img
+                src="./images/photo-3.jpg"
+                alt="В левой руке находится планшет с изображенной на нем цветовой палитрой"
+                width="370"
+                />
+                <p class="work-item-text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -416,5 +425,15 @@
       </div>
      </div> 
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="close-button" aria-label="Закрыть" data-modal-close>
+          <svg class="close-button-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
