--- a/portfolio.html
+++ b/portfolio.html
@@ -22,23 +22,23 @@
         <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
         <nav class="main-nav">
           <ul class="site-nav list">
-            <li class="site-nav-item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="site-nav-item"><a href="./index.html" class="site-nav-link">Студия</a></li>
             <li class="site-nav-item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="site-nav-link current">Портфолио</a>
             </li>
-            <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
+            <li class="site-nav-item"><a href="" class="site-nav-link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contact-nav list">
           <li class="contact-nav-item">
-            <a href="mailto:info@devstudio.com" class="link">
+            <a href="mailto:info@devstudio.com" class="contact-nav-link">
               <svg class="link-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
           <li class="contact-nav-item">
-            <a href="tel:+380961111111" class="link">
+            <a href="tel:+380961111111" class="contact-nav-link">
               <svg class="link-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11
@@ -72,11 +72,18 @@
           <ul class="portfolio-list list">
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/technoduck.jpg"
-                  alt="Ноутбук, на котором изображены 3 фотокартки"
-                  width="370"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/technoduck.jpg"
+                    alt="Ноутбук, на котором изображены 3 фотокартки"
+                    width="370"
+                  />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-description">Веб-сайт</p>
@@ -85,11 +92,18 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/poster-new-orlean-vs-golden-star.jpg"
-                  alt="Два баскетболиста"
-                  width="370"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/poster-new-orlean-vs-golden-star.jpg"
+                    alt="Два баскетболиста"
+                    width="370"
+                  />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title">
                     Постер<span lang="en"> New Orlean vs Golden Star</span>
@@ -100,11 +114,18 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/restaurant-seafood.jpg"
-                  alt="Логотип ресторана морепродуктов"
-                  width="370"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/restaurant-seafood.jpg"
+                    alt="Логотип ресторана морепродуктов"
+                    width="370"
+                  />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title">Ресторан<span lang="en"> Seafood</span></h2>
                   <p class="portfolio-description">Приложение</p>
@@ -113,7 +134,14 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img src="./images/project-prime.jpg" alt="Наушники" width="370" />
+                <div class="overlay">
+                  <img src="./images/project-prime.jpg" alt="Наушники" width="370" />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title">Проект<span lang="en"> Prime</span></h2>
                   <p class="portfolio-description">Маркетинг</p>
@@ -122,7 +150,14 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img src="./images/project-boxes.jpg" alt="Коробки" width="370" />
+                <div class="overlay">
+                  <img src="./images/project-boxes.jpg" alt="Коробки" width="370" />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title">Проект<span lang="en"> Boxes</span></h2>
                   <p class="portfolio-description">Приложение</p>
@@ -131,11 +166,18 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/inspiration-has-no-borders.jpg"
-                  alt="Компьютер с надписью, что у вдохновения нет границ"
-                  width="370"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/inspiration-has-no-borders.jpg"
+                    alt="Компьютер с надписью, что у вдохновения нет границ"
+                    width="370"
+                  />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-description">Веб-сайт</p>
@@ -144,7 +186,14 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img src="./images/limited-edition.jpg" alt="Журнал" width="370" />
+                <div class="overlay">
+                  <img src="./images/limited-edition.jpg" alt="Журнал" width="370" />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title">Издание<span lang="en"> Limited Edition</span></h2>
                   <p class="portfolio-description">Дизайн</p>
@@ -153,7 +202,14 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img src="./images/project-lab.jpg" alt="Бирка" width="370" />
+                <div class="overlay">
+                  <img src="./images/project-lab.jpg" alt="Бирка" width="370" />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title">Проект<span lang="en"> LAB</span></h2>
                   <p class="portfolio-description">Маркетинг</p>
@@ -162,11 +218,18 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/growing-business.jpg"
-                  alt="Руки печатают на ноутбуке"
-                  width="370"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/growing-business.jpg"
+                    alt="Руки печатают на ноутбуке"
+                    width="370"
+                  />
+                  <p class="portfolio-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-container">
                   <h2 lang="en" class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-description">Приложение</p>
