--- a/portfolio.html
+++ b/portfolio.html
@@ -72,13 +72,13 @@
           <ul class="portfolio-list list">
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img
                     src="./images/technoduck.jpg"
                     alt="Ноутбук, на котором изображены 3 фотокартки"
                     width="370"
                   />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -92,13 +92,13 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img
                     src="./images/poster-new-orlean-vs-golden-star.jpg"
                     alt="Два баскетболиста"
                     width="370"
                   />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -114,13 +114,13 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img
                     src="./images/restaurant-seafood.jpg"
                     alt="Логотип ресторана морепродуктов"
                     width="370"
                   />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -134,9 +134,9 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img src="./images/project-prime.jpg" alt="Наушники" width="370" />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -150,9 +150,9 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img src="./images/project-boxes.jpg" alt="Коробки" width="370" />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -166,13 +166,13 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img
                     src="./images/inspiration-has-no-borders.jpg"
                     alt="Компьютер с надписью, что у вдохновения нет границ"
                     width="370"
                   />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -186,9 +186,9 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img src="./images/limited-edition.jpg" alt="Журнал" width="370" />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -202,9 +202,9 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img src="./images/project-lab.jpg" alt="Бирка" width="370" />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -218,13 +218,13 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <div class="overlay">
+                <div class="portfolio-thumb">
                   <img
                     src="./images/growing-business.jpg"
                     alt="Руки печатают на ноутбуке"
                     width="370"
                   />
-                  <p class="portfolio-text">
+                  <p class="portfolio-overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
